More cleaning up js

--- a/client/index.html
+++ b/client/index.html
@@ -95,6 +95,7 @@
     var myInterval = 0;
     var trueorfalse = false;
 
+    // POST JSON to the Golang backend 
     function sendJSON(eventtype, websiteurl, sessionid, prevwidth, prevheight, currentwidth, currentheight,
       trueorfalse, formcompletiontime) {
       var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance 
